// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not return negative limit 1`] = `
Object {
  "count": 2,
  "edges": Array [],
  "endCursorOffset": 10,
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": null,
  },
  "startCursorOffset": 10,
}
`;

exports[`should return connection from mongo aggregate 1`] = `
Object {
  "count": 2,
  "edges": Array [
    Object {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
  ],
  "endCursorOffset": 1,
  "pageInfo": Object {
    "endCursor": "bW9uZ286MA==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should return connection from mongo aggregate 2`] = `
Object {
  "count": 2,
  "edges": Array [
    Object {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": Object {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "bW9uZ286MQ==",
  },
  "startCursorOffset": 1,
}
`;

exports[`should return connection from mongo aggregate with raw 1`] = `
Object {
  "count": 2,
  "edges": Array [
    Object {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
  ],
  "endCursorOffset": 1,
  "pageInfo": Object {
    "endCursor": "bW9uZ286MA==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should work with empty args 1`] = `
Object {
  "count": 2,
  "edges": Array [
    Object {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    Object {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": Object {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should work with empty args and empty result 1`] = `
Object {
  "count": 0,
  "edges": Array [],
  "endCursorOffset": 0,
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": null,
  },
  "startCursorOffset": 0,
}
`;
